/*
 * Copyright (c) 2019 VMware, Inc. All rights reserved. VMware Confidential
 */

// Internal agent protobuf definition.

syntax = "proto3"; // would prefer proto3 but build at the toplevel uses proto2
package com.vmware.blockchain.agent;

message ConcordAgentStatus {
   enum HealthStatus {
       GREEN = 0;
       YELLOW = 1;
       RED = 2;
   }
   uint64 version = 1;
   HealthStatus status = 2;
}
